# flora

./: CMakeLists.txt  README.md
examples/: example.cpp
libs/stb_image/: CMakeLists.txt
src/: Color.hpp  ColorPalette.hpp  Flora.cpp  Flora.hpp  SchemeType.hpp
